proxima/shared/keycloak/deployment.yaml
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: shared-keycloak
  labels:
    app: shared-keycloak
spec:
  serviceName: shared-keycloak-discovery
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 1
  selector:
    matchLabels:
      app: shared-keycloak
  template:
    metadata:
      labels:
        app: shared-keycloak
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: keycloak
          image: ghcr.io/sigurs/container-rebuilds/keycloak:26.4.0
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 1
            failureThreshold: 600              
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1700Mi
          volumeMounts:
            - mountPath: /tmp
              name: keycloak-tmp
            - mountPath: /opt/keycloak/data
              name: keycloak-data
      volumes:
        - emptyDir: {}
          name: keycloak-tmp
        - emptyDir: {}
          name: keycloak-data
