proxima/shared/keycloak/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-keycloak-proxy
spec:
  selector:
    app.kubernetes.io/name: shared-keycloak-proxy
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
