proxima/shared/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-keycloak
  labels:
    app: shared-keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: shared-keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shared-keycloak
  name: shared-keycloak-discovery
spec:
  selector:
    app: shared-keycloak
  clusterIP: None
  type: ClusterIP
