proxima/shared/keycloak/kc-cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shared-keycloak
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: shared-keycloak
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: shared-keycloak-proxy
      toPorts:
        - ports:
            - port: "8080"
  egress:
    # Postgres
    - toServices:
        - k8sService:
            serviceName: shared-postgres-rw
            namespace: shared-postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Other KC pods
    - toEndpoints:
      - matchLabels:
          app.kubernetes.io/name: shared-keycloak
